# Golem

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.example.yml
golem/: Cargo.toml
golem/src/: config.rs  discord.rs  main.rs
golem/src/tcl/: commands.rs  mod.rs  tcl.rs
