[package]
name = "golem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] } 
serde_json = "1.0.86"
serde_yaml = "0.9.13"
serenity = "0.11.5"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
molt = { version = "0.3.1", path = "../molt/molt" }
rand = "0.8.5"

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]   
opt-level = 3